# sparselizard

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  run_sparselizard.sh
examples/: validate.sh
external_libs/scripts/: install.sh  install_petsc.sh  optional_install_gmsh_api.sh
install_external_libs/: install_dependencies.sh
